# word_counter

./: .env  Cargo.toml  README.md
src/: error.rs  main.rs  schemas.rs  urls.rs
src/database/: mod.rs  models.rs
src/migrations/: 20240908105200_word_counter.sql
src/services/: mod.rs  text_parser.rs
