[package]
name = "word_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.10.0"
json = "0.12.4"
log = "0.4.19"
serde = "1.0.170"
serde_derive = "1.0.170"
